--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Web Try</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     
-    <h1>My 1st Git hub repo try. Hope all things lear well.</h1>
+    <h1>My 1st Git hub repo try. Hope all things learn well.</h1>
 
 
 
