--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     
-    <h1>My 1st Git hub repo try. Hope all things learn well.</h1>
+    <header>
+        <div>
+            <img style="width: 50px;" src="images/logo.png" alt="" srcset="">
+        </div>
+
+        <div class="nav_items">
+            <ul>
+                <li>Services</li>
+                <li>Resume</li>
+                <li>Works</li>
+                <li>Skills</li>
+                <li>Contact</li>
+            </ul>
+            
+            <button>Hire me!</button>
+        </div>
+    </header>
 
 
 
