--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <button>Download Cv Here..!</button>
 
                 <ul>
-                    <i class="fa-brands fa-facebook-f"></i>
+                    <i style="width: 20px;" class="fa-brands fa-facebook-f"></i>
                     <i class="fa-brands fa-linkedin-in"></i>
                     <i class="fa-brands fa-github"></i>
                 </ul>
