--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Web Try</title>
+    <title>Frist Portfolio</title>
     <link href="//fonts.googleapis.com" />
     <link rel="stylesheet" href="css/style.css" />
 
@@ -64,5 +64,15 @@
       </div>
     </section>
     <!-- banner part end -->
+
+    <!-- exprience & work part start -->
+
+    <section>
+
+        .
+
+    </section>
+
+    <!-- exprience & work part end -->
   </body>
 </html>
