--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Frist Portfolio</title>
     <link href="//fonts.googleapis.com" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
 
     <link
       rel="stylesheet"
